--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jMu-mm-47V">
                                 <rect key="frame" x="261" y="289" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Mx-zS-qEm">
@@ -45,7 +45,7 @@
                                     <constraint firstAttribute="width" constant="76" id="GCc-Zu-SZA"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHN-9D-RWW">
@@ -80,10 +80,10 @@
                                     <constraint firstAttribute="width" constant="179" id="HPb-bO-pVk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="wWH-8R-4yE">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="wWH-8R-4yE">
                                 <rect key="frame" x="282" y="507" width="37" height="37"/>
                                 <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </activityIndicatorView>
@@ -95,6 +95,7 @@
                             <constraint firstAttribute="centerX" secondItem="0Mx-zS-qEm" secondAttribute="centerX" id="IH9-OZ-lA7"/>
                             <constraint firstItem="RPP-wG-TD6" firstAttribute="top" secondItem="CHN-9D-RWW" secondAttribute="bottom" constant="8" id="bi5-1Y-S2e"/>
                             <constraint firstItem="CHN-9D-RWW" firstAttribute="top" secondItem="QSt-EZ-b3c" secondAttribute="bottom" constant="8" id="cVC-on-L9k"/>
+                            <constraint firstItem="wWH-8R-4yE" firstAttribute="top" secondItem="RPP-wG-TD6" secondAttribute="bottom" constant="8" id="dJr-WE-uLp"/>
                             <constraint firstAttribute="centerX" secondItem="Yq8-56-HcA" secondAttribute="centerX" id="dNX-qa-7HB"/>
                             <constraint firstItem="Yq8-56-HcA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eRi-MA-rph"/>
                             <constraint firstItem="4C9-R4-X1O" firstAttribute="top" secondItem="jMu-mm-47V" secondAttribute="bottom" constant="8" id="gqy-or-17v"/>
@@ -102,6 +103,7 @@
                             <constraint firstAttribute="centerX" secondItem="4C9-R4-X1O" secondAttribute="centerX" id="o9g-R6-kI1"/>
                             <constraint firstItem="0Mx-zS-qEm" firstAttribute="top" secondItem="4C9-R4-X1O" secondAttribute="bottom" constant="17" id="tlN-Rg-dUV"/>
                             <constraint firstAttribute="centerY" secondItem="jMu-mm-47V" secondAttribute="centerY" id="u7l-32-BuC"/>
+                            <constraint firstAttribute="centerX" secondItem="wWH-8R-4yE" secondAttribute="centerX" id="uMd-Qr-8Bt"/>
                             <constraint firstAttribute="centerX" secondItem="RPP-wG-TD6" secondAttribute="centerX" id="vkC-ls-XaX"/>
                             <constraint firstAttribute="centerX" secondItem="CHN-9D-RWW" secondAttribute="centerX" id="vkY-T1-o9N"/>
                         </constraints>
@@ -137,7 +139,7 @@
                                     <constraint firstAttribute="width" constant="165" id="3cS-GY-YDY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pvA-5T-EDj">
@@ -170,7 +172,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LJ-RV-8z8">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LJ-RV-8z8">
                                 <rect key="frame" x="235" y="305" width="130" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -180,7 +182,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBR-CC-OSa">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBR-CC-OSa">
                                 <rect key="frame" x="277" y="343" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="46" id="Tjo-vc-DYj"/>
@@ -220,6 +222,7 @@
                             <constraint firstItem="24K-6X-3gN" firstAttribute="leading" secondItem="SYw-iz-HcQ" secondAttribute="leadingMargin" constant="39" id="j2D-xa-EyG"/>
                             <constraint firstAttribute="centerX" secondItem="HDf-zf-Tan" secondAttribute="centerX" id="kqa-Vu-hdl"/>
                             <constraint firstItem="jg8-xd-Hsb" firstAttribute="leading" secondItem="SYw-iz-HcQ" secondAttribute="leadingMargin" constant="39" id="o02-eB-LKA"/>
+                            <constraint firstItem="7LJ-RV-8z8" firstAttribute="top" secondItem="qao-EI-2US" secondAttribute="bottom" constant="8" id="qaN-AJ-Zna"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pvA-5T-EDj" secondAttribute="trailing" constant="39" id="vfM-xd-f6D"/>
                             <constraint firstAttribute="centerX" secondItem="rBR-CC-OSa" secondAttribute="centerX" id="y7P-hj-G3e"/>
                             <constraint firstItem="24K-6X-3gN" firstAttribute="top" secondItem="IEO-xD-UKg" secondAttribute="bottom" constant="8" id="yY5-YE-j6J"/>
@@ -274,7 +277,7 @@
                                                 <constraint firstAttribute="width" constant="559" id="sSX-cX-5KS"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EventTimeLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP1-AL-D7v">
@@ -283,7 +286,7 @@
                                                 <constraint firstAttribute="width" constant="559" id="lmk-3B-A8y"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
